Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12626

QSqlTableModel and insertColumns() issue

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.7.2
    • 4.5.3, 4.7.0
    • SQL Support
    • None
    • 4.5.3 and 4.7.0 beta 2 on Windows XP and 4.7.0 beta 2 on Ubuntu 10.04
    • 9c61e9a40e774fe32b16c133a5cdd6b9d9d29d83

    Description

      If i insert extra column in any place in model, except end, I'm getting original columns that are after the column I've inserted shifted on two positions right. Last column in model disappears. The function i use to add column is insertColumn(). Data for this column is specially handled in reimplemented data() function in QSqlTableModel subclass.
      Checked with QTreeView and SQLITE database.
      tableTest.zip - small project to reproduce this bug
      with.jpg - screenshot of the test program with insertColumn(2) function call
      without.jpg - screenshot of the test program where insertColumn() function is commented out

      Attachments

        1. tableTest.zip
          1 kB
        2. with.jpg
          with.jpg
          29 kB
        3. without.jpg
          without.jpg
          29 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mgoddard Michael Goddard (closed Nokia identity) (Inactive)
            paullo Pavel Golikov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes