QSqlTableModel/QSqlQueryModel and insertColumns problem.

After inserting a column, fetching data through QSqlTableModel was
off by one or more, since it passed the indexInQuery through to
QSQM.  Also, the headerData would sometimes return a blank string
for an inserted column, and sometimes the column number.

The autotests have been beefed up a little to check insertRows and
insertColumns play nicely.

Change-Id: I7399d4c4d94f958884b67ab9b39b5cf2485d8416
Task-number: QTBUG-12626
Reviewed-by: Charles Yin
(cherry picked from commit 9c61e9a40e774fe32b16c133a5cdd6b9d9d29d83)